# vmecpp

./: .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  BENCHMARK_RESULTS.txt  CLAUDE.md  CMakeLists.txt  CODEOWNERS  JVMEC_ASYMMETRIC_ANALYSIS_FINAL.md  JVMEC_COMPREHENSIVE_COMPARISON.md  MISSING_ASYMMETRIC.md  MISSING_ASYMMETRIC_FEATURES_FINAL.md  OPTIMIZATION_REPORT.md  PT_TYPE_IMPLEMENTATION_SUMMARY.md  README.md  TODO.md  VALIDATION_SUMMARY.md  VMECPP_NAMING_GUIDE.md  add_debug_arnorm.py  asymmetric_comparison_report.md  asymmetric_debug_plan.cc  asymmetric_derivative_fix.md  asymmetric_derivative_fix_summary.md  asymmetric_fix_plan.md  asymmetric_implementation_plan.md  asymmetric_investigation_plan.md  asymmetric_issue_summary.md  asymmetric_transform_fix.md  benchmark_vmec  cma.json  convergence_summary.md  cth_like_fixed_bdy.json  debug_arnorm.py  debug_array_creation.py  environment.yml  flake.nix  fourier_transform_debug_analysis.md  golden_record_output.txt  input.LandremanSenguptaPlunk  (+99 more)
dft_bench/: BUILD.bazel  dft_bench.cc  dft_bench_test.cc  fast_poloidal.cc  fast_poloidal.h  fast_toroidal.cc  fast_toroidal.h  fast_toroidal_vectorized.cc  fast_toroidal_vectorized.h  ideal_mhd_data.cc  ideal_mhd_data.h  inputs.cc  inputs.h
src/cpp/vmecpp/common/sizes/: BUILD.bazel  sizes.h  sizes_test.cc
src/cpp/vmecpp/free_boundary/external_magnetic_field/: BUILD.bazel  external_magnetic_field.cc  external_magnetic_field.h  external_magnetic_field_test.cc
src/cpp/vmecpp/free_boundary/mgrid_provider/: BUILD.bazel  mgrid_provider.cc
src/cpp/vmecpp/free_boundary/surface_geometry/: BUILD.bazel  surface_geometry.cc
src/cpp/vmecpp/tools/magnetic_configuration_definition/: BUILD.bazel  magnetic_configuration.proto
src/cpp/vmecpp/vmec/boundaries/: BUILD.bazel  boundaries_test.cc  guess_magnetic_axis.h
src/cpp/vmecpp/vmec/radial_profiles/: BUILD.bazel  radial_profiles.cc  radial_profiles.h  radial_profiles_test.cc
src/cpp/vmecpp/vmec/vmec/: BUILD.bazel  vmec.h  vmec_hot_restart_test.cc  vmec_test.cc
src/vmecpp/cpp/: .bazelrc  .gitattributes  BUILD.bazel  BUILD.symmetric_asymmetric_test  BUILD.symmetric_test  BUILD.test  MODULE.bazel  asymmetric_failure_analysis.md  asymmetric_fixed.json  asymmetric_fixed2.json  asymmetric_fourier_bugs_detailed.md  better_asymmetric.json  exact_upstream_2d_function.txt  simple_asymmetric.json  simple_test.json  solovev.out.h5  solovev_fixed.json  solovev_fixed.out.h5  temp_file.cc  test_asym_minimal.json  test_asymmetric_fourier_diff.py  test_azNorm_validation.py  test_fix.cc  test_initialization_comparison.py  test_interface_fix.py  test_lambda_fix.py  test_memory_corruption.py  test_regression_check.py  test_spectral_condensation_asymmetric.py  test_spectral_condensation_direct.py  test_spectral_condensation_simple.py  test_symmetric_asymmetric.cc  test_symmetric_check.cc  test_symmetric_simple.json  test_vmecpp_json_cases.py  test_vmecpp_standalone.py  test_vmecpp_vs_educational.py  upstream_2d_function.txt  vmecpp_debug_output.txt  vmecpp_debug_output_with_jvmec_fix.txt
src/vmecpp/cpp/comparison_results/Circular_tokamak/: educational_vmec_stdout.txt
src/vmecpp/cpp/comparison_results/SOLOVEV_symmetric/: educational_vmec_stdout.txt
src/vmecpp/cpp/docker/tsan/: Dockerfile  README.md  background_info.md
src/vmecpp/cpp/makegrid/: README.md
src/vmecpp/cpp/makegrid/example_inputs/: makegrid_parameters.json
src/vmecpp/cpp/makegrid/makegrid/: BUILD.bazel  makegrid.cc
src/vmecpp/cpp/util/cubic_spline/: BUILD.bazel  cubic_spline.h  cubic_spline_demo.cc  cubic_spline_demo_plot.py  cubic_spline_test.cc
src/vmecpp/cpp/util/file_io/: BUILD.bazel  file_io.cc  file_io_test.cc
src/vmecpp/cpp/util/hdf5_io/: BUILD.bazel  hdf5_io.cc  hdf5_io.h
src/vmecpp/cpp/util/json_io/: BUILD.bazel  json_io.cc
src/vmecpp/cpp/util/netcdf_io/: BUILD.bazel  netcdf_io.cc  netcdf_io.h  netcdf_io_test.cc
src/vmecpp/cpp/util/test_data/: BUILD.bazel
src/vmecpp/cpp/util/testing/: BUILD.bazel  numerical_comparison_test.cc
src/vmecpp/cpp/vmecpp/common/: CMakeLists.txt
src/vmecpp/cpp/vmecpp/free_boundary/: CMakeLists.txt
src/vmecpp/cpp/vmecpp/simsopt_compat/: __init__.py  _fortran_wout_adapter.py  _fortran_wout_adapter_test.py  _indata_to_surfacerzfourier_test.py  _vmec_indata_compat.py  _vmec_indata_compat_test.py
src/vmecpp/cpp/vmecpp/test_data/: BUILD.bazel  cth_like_fixed_bdy_spline_pressure.json  cth_like_free_bdy_asym.json  cth_like_free_bdy_multigrid.json  input.anisotropic_profile_parse  input.solovev_free_bdy  input.test_asymmetric  input.up_down_asymmetric_tokamak.json  iota_05_near_axis.json  jxbout_cma.nc  mgrid_cth_like_asym.nc  near_axis_iota_nfp4.json  parvmec_cth_like_fixed_bdy_force_trace.csv  solovev.out.h5  solovev_free_bdy.json  solovev_free_bdy_lforbal.json  test_asymmetric_simple.json  test_minimal_asymmetric.json  up_down_asym.json  up_down_asymmetric_tokamak.json  up_down_asymmetric_tokamak_simple.json  w7x.json  w7x_generic_initial_guess.json  wout_LandremanSengupta2019_section5.4_B2_A80_reference.nc  wout_circular_tokamak_reference.nc  wout_cma.nc  wout_cth_like_fixed_bdy.nc  wout_cth_like_fixed_bdy_nzeta_37.nc  wout_cth_like_free_bdy.nc  wout_li383_low_res_reference.nc  wout_solovev.nc  wout_solovev_analytical.nc  wout_solovev_free_bdy.nc  wout_solovev_free_bdy_T.nc  wout_solovev_no_axis.nc
src/vmecpp/cpp/vmecpp/vmec/: CMakeLists.txt
src/vmecpp/cpp/vmecpp_large_cpp_tests/: .gitattributes  README.md
src/vmecpp/cpp/vmecpp_large_cpp_tests/linking_current_test/: linking_current_test.cc
src/vmecpp/cpp/vmecpp_large_cpp_tests/test_data/: .gitignore  cma.json  cth_like_fixed_bdy.json  cth_like_fixed_bdy_nzeta_37.json  cth_like_free_bdy.json  input.cma  input.cth_like_fixed_bdy  input.cth_like_fixed_bdy_nzeta_37  input.cth_like_free_bdy  input.solovev  input.solovev_free_bdy  input.solovev_no_axis  makegrid_parameters_cth_like.json  makegrid_parameters_solovev.json  solovev.json  solovev_analytical.json  solovev_free_bdy.json  solovev_no_axis.json  threed1.cth_like_free_bdy  threed1.solovev_free_bdy
(+1637 files in other folders)
